--- a/styless.css
+++ b/styless.css
@@ -8,7 +8,7 @@
 
 body {
     min-width: 100%;
-    padding: 10px;
+    /* padding: 10px; */
     font-family: 'Poppins', sans-serif;
 }
 /* ---------- COMIENZO DEL DISEÑO DE HEADER------------------------------------------ */
@@ -107,8 +107,8 @@ font-size: 0.813rem;
  .mis-conocimientos {
       /* border-style: groove; */
       background-color: rgb(234, 225, 241);
-      height: auto;
-      padding: 30px;
+      height: 900px;
+      /* padding: 10px; */
  
     }
 
@@ -131,6 +131,7 @@ font-size: 0.813rem;
     flex-wrap: wrap;
     text-align: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .icono {
@@ -141,7 +142,7 @@ font-size: 0.813rem;
     /* border-color: black; */
     /* border-style: groove; */
     margin: 15px;
-    /* margin-top: 15px; */
+    margin-top: 15px;
     align-items: center;
     border-radius: 7px;
     flex-direction: column;
@@ -151,4 +152,28 @@ font-size: 0.813rem;
 
 .iconos-de-conocimientos i {
     font-size: 50px;
+}
+
+/* <!----------------------- Fin de seccion de "Mis conocimientos" ----------------> */
+.frase {
+    background-color: rgb(101, 101, 197);
+      height: 400px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      color: white;
+     
+}
+.container-frase {
+  
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.container-frase i {
+    font-size: 100px;
+}
+
+.autor-de-frase {
+   font-size: 20px; 
 }
