--- a/styless.css
+++ b/styless.css
@@ -170,12 +170,12 @@ font-size: 0.938rem;
 /* <!----------------------- Fin de seccion de "Mis conocimientos" ----------------> */
 
 /* -----------------COMIENZO DE FRASE----------------- */
-.frase {
+/* .frase {
     padding: 120px 30px;
     background-color: rgb(247, 188, 247);
     color: white;
    
-}
+} */
 .container-frase {
     display: flex;
     justify-content: center;
@@ -189,7 +189,11 @@ font-size: 0.938rem;
     /* display: flex;
     flex-direction: column;
     text-align: center; */
-}
+    padding: 100px 30px;
+    background-color: rgb(255, 0, 0);
+    }
+
+
 
 .container-frase i {
     font-size: 100px;
@@ -200,4 +204,53 @@ font-size: 0.938rem;
 }
 
 /* ----------------FIN DE FRASE-------------------- */
+/* --------------------COMIENZO DE MIS PROYECTOS------------------ */
+.container-proyectos {
+    padding: 120px 30px;
+    background-color: rgb(202, 202, 202)
+}
 
+.texto-proyectos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+h4 {
+    font-size: 30px;
+    padding-bottom: 10px;
+}
+
+.card-proyecto img {
+    height: 200px;
+    width: 233px;
+}
+
+.cards-de-proyectos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.card-proyecto {
+    width: 292px;
+    height: 282px;
+  margin: 8px;
+  /* font-size: 5px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background-color: white;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);}
+    
+
+.card-proyecto a {
+    text-decoration: none;
+    color: gray;
+
+}
