--- a/styless.css
+++ b/styless.css
@@ -207,7 +207,7 @@ font-size: 0.938rem;
 /* --------------------COMIENZO DE MIS PROYECTOS------------------ */
 .container-proyectos {
     padding: 120px 30px;
-    background-color: rgb(202, 202, 202)
+    background-color: rgb(247, 247, 247)
 }
 
 .texto-proyectos {
@@ -254,11 +254,13 @@ h4 {
     color: gray;
 
 }
+/* ------------------FINAL DE "MIS PROYECTOS"--------------------------------------- */
 
-/* --------------COMIENZO DE "CONTACTAME"------------ */
+/* -----------------------------------COMIENZO DE "CONTACTAME"------------------------------------------- */
 .contactame{
 padding: 32px 30px;
-background-color: rgb(141, 141, 141)
+background-color: rgb(237, 212, 255);
+padding-bottom: 250px;
 }
 
 h5 {
@@ -271,37 +273,13 @@ margin-bottom: 15px;
 }
 
 /* ------------ LISTA DE CONTACTOS----------- */
-/* 
-.red-github {
-    margin-bottom: 100px;
-    padding-left: 30px;
-    margin-top: 20px;
-    height: 27px;
-    display: inline-block;
-    align-items: center;
-    text-decoration: none;
-    }
-    
-    .red-github span:first-child {
-        display:inline-block;
-        width: 2.2rem;
-        height: 2.2rem;
-        background-color: #f10202;
-        color: #8338ec;
-        border-radius: 50%;
-        font-size: 1.2rem;
-        line-height: 2.2rem;
-        margin-right: 10px;
-        text-align: center;
-        transition: 0.2s;
-    }
-        
-    .red-github span:first-child:hover {
-     
-     font-size: 20px;
-     background-color: #010101;
-    } */
+ 
 
+.container-contacto {
+        margin-top: 35px;
+        padding-left: 10px;
+        margin-bottom: 30px;
+    }
 .lista-de-contacto {
     display: flex;
     align-items: flex-start;
@@ -359,4 +337,53 @@ margin-bottom: 15px;
 }
 /* ----------------falta aqui poner la opcion hover------------ */
 /* ---------FIN DEL NAV DE LISTA DE CONTACTO------------- */
+/* -------------------------COMIENZO DE FORMULARIO----------------------------------- */
+.container-escribeme{
+    margin-top: 30px;
+    display: flex;
+    
+}
+h6 {
+    font-size: 30px;
+    font-weight: bold;
+}
+.input_container {
+    display: flex;
+    flex-direction: column;
+    
+}
+.input_container label {
+    margin: 8px;
+}
+.input_container input {
+    border-radius: 30px;
+    height: 37px;
+    border: none;
+}
+.input_container ::placeholder {
+    font-size: 15px;
+    padding-left: 18px;
+}
+.input_container textarea {
+    padding:10px;
+    border-radius: 34px;
+    border: none;
+}
+.input_container textarea ::placeholder {
+    font-size: 15px;
+    padding-left: 18px; 
+}
+
+.btn-enviar {
+    font-size: 12px; 
+    color: #ffffff; 
+    background-color: #5b4caf; 
+    padding: 12px 30px; 
+    border: none; 
+    border-radius: 100px; 
+    margin-top: 13px;
+    align-items: center;
+}
+
+/* -----------FINAL DE FORMULARIO Y SECCION "contactame"----------------------------------- */
 
