--- a/styless.css
+++ b/styless.css
@@ -15,8 +15,8 @@ body {
 
    
 /* ---------- COMIENZO DEL DISEÑO DE HEADER------------------------------------------ */
-/* header {
-    /* width: 100%; 
+ header {
+    width: 100%; 
     display: flex;
     justify-content: space-around;
     padding: 20px;
@@ -38,7 +38,7 @@ body {
 .items-link {
     margin: 15px;
     text-decoration: none;
-}   */
+}  
 
    /* ---------- FIN DEL DISEÑO DE HEADER--------------------------------------- */
 
@@ -260,7 +260,7 @@ h4 {
 .contactame{
 padding: 32px 30px;
 background-color: rgb(237, 212, 255);
-padding-bottom: 250px;
+padding-bottom: 100px;
 }
 
 h5 {
@@ -387,3 +387,58 @@ h6 {
 
 /* -----------FINAL DE FORMULARIO Y SECCION "contactame"----------------------------------- */
 
+
+ footer  {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: #5d5dea;
+    padding: 70px 30px;
+    flex-direction: column;
+}
+/* ------------------------- NAVEGACION DE FOOTER PARA DOKSTOP-------------------- */
+.navegacion-de-footer a{
+    text-decoration: none;
+    margin: 10px;
+}
+
+.navegacion-de-footer {
+    padding-bottom: 20px;
+}
+
+/* -------------FINAL DE NAVEGACION DE FOOTER PARA DOSKTOP--------------------------- */
+
+/* -----------ICONOS Y SALUDO FINAL ------------------------------------ */
+
+    .ultimos-iconos {
+        display: flex;
+        /* padding-bottom: 30px; */
+        /* flex-direction: row; */
+        justify-content: center;
+        }
+        
+    .red-githubdos {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            padding-bottom: 15px;
+            color: black;
+        }
+    
+    .red-githubdos span {
+        font-size: 30px;
+        background-color: rgb(112, 54, 54);
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 45px;
+        height: 45px;
+        color: black;
+        margin: 10px;
+    }
+    
+.saludo-final {
+    font-size: 20px;
+    color: white;
+}
