--- a/styless.css
+++ b/styless.css
@@ -4,13 +4,28 @@
     box-sizing: border-box;
 }
 
+:root{
+--tipografia-titulo: 'Montserrat', sans-serif;}
+:root {
+--color-seleccionado: rgb(13,78,90);
+}
+:root{
+    --color-segundo:linear-gradient(0deg, rgba(13,78,90,1) 6%, rgba(13,78,90,1) 21%, rgba(36,127,130,1) 100%);
+}
+:root {
+    --subtitulos--tamaño: 35px;
+}
+:root{
+    --color-icono: rgb(12, 189, 196);
+}
+
      /* ----------------BODY------------------- */
 
 body {
     /* max-width: 1100px; */
         /* padding: 10px; */
-    font-family: 'Poppins', sans-serif;
-    padding: auto;
+        font-family: 'Oxygen', sans-serif;
+        padding: auto;
 }
 
    
@@ -39,13 +54,17 @@ body {
     margin: 15px;
     text-decoration: none;
 }  
-
+@media (max-width: 970px) {
+    header {
+        display: none; 
+    }
+}
    /* ---------- FIN DEL DISEÑO DE HEADER--------------------------------------- */
 
- /* -------------COMIENZO DEL DISEÑO DE MAIN----------------------- */
+ /* -------------COMIENZO DEL DISEÑO DE MAIN---------------ter-------- */
 
  main {
-    padding: 120px 30px;
+    padding: 145px 30px;
     background-color: rgb(255, 255, 255);
  }
  .container-main {
@@ -56,24 +75,23 @@ body {
     /* background-color: rgb(204, 167, 236); */
     /* border-color: black; */
     /* border-width: 5px; */
-    height: 650px;
     flex-direction: column;
 }
    
 .saludo {
-    padding-top: 70px;
     font-weight: bold;
     font-size: 1.3rem;
+    font-family: var(--tipografia-titulo);
 }
  /* .titulo {
      /* background-color: rgb(204, 167, 236); */
     
             
  .nombre {
-    font-family: 'Amaranth', sans-serif;
-    color: blue;
+    font-family:var();
+    color:var(--color-seleccionado);
      /* padding-top:10px; */
-      font-size: 3.438rem;
+      font-size: 50px;
 
   }
 
@@ -85,13 +103,15 @@ font-size: 0.938rem;
 
 
 .btn-primero {
-        border-radius: 100px;
-        margin: 15px;
-        padding: 7px 30px;
-        background-color: #5d5dea;
-        color: white;
-        bottom: auto;
-        border-style: none;
+    border-radius: 85px;
+    margin: 27px;
+    padding: 17px 41px;
+    background: var(--color-seleccionado);
+    background: var(--color-segundo);
+    color: white;
+    bottom: auto;
+    border-style: none;
+    font-size: 15px;
 }
 
 /* --------------HASTA AQUI NO LE PUSE IMAGEN AL MAIN------------------------- */
@@ -110,7 +130,7 @@ font-size: 0.938rem;
 
  .container-conocimientos {
     padding: 100px 30px;
-    background-color: rgb(235, 235, 235);
+    background-color:rgb(246,247,251);
     }
 
     /* ------DEBO RESOLVER EL TEMA DEL TAMAÑO DE MIS CONOCIMIENTOS----------------------- */
@@ -131,10 +151,9 @@ font-size: 0.938rem;
     margin: 24px 7px;
 }
 
-.segundo-titulo {
-    font-size: 1.875rem;
-    /* padding-top: 40px; */
-}
+.segundo-titulo{
+    font-size: var(--subtitulos--tamaño);
+    font-family: var(--tipografia-titulo);}
 
 /* ---------------- AQUI COMIENZA LOS CUADROS DE MIS CONOCIMIENTOS------------------- */
 .iconos-de-conocimientos {
@@ -143,25 +162,33 @@ font-size: 0.938rem;
     text-align: center;
     justify-content: center;
     margin-bottom: 10px;
+    margin-top: 27px;
 }
 
 .icono {
-    display: flex;
-    width: 166px;
-    height: 166px;
-    /* border-width: 2px; */
-    /* border-color: black; */
-    /* border-style: groove; */
-    margin: 5px;
-    align-items: center;
-    border-radius: 7px;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #fffaf8;
+        display: flex;
+        /* width: auto; */
+        padding: 30px 10px;
+        width: calc(50% - 1em);
+        /* height: auto; */
+        /* border-width: 2px; */
+        /* border-color: black; */
+        /* border-style: groove; */
+        margin: 5px;
+        align-items: center;
+        border-radius: 7px;
+        flex-direction: column;
+        justify-content: center;
+        background-color: white;
+        border: 1px solid #e4e3e3;
+        flex-wrap: wrap;
+}
+.icono:hover{
+    border: 1px solid rgba(36,127,130,1);
 }
 
 .iconos-de-conocimientos i {
-    font-size: 70px;
+    font-size: 50px;
 }
 .icono p {
     padding-top: 10px;
@@ -190,7 +217,9 @@ font-size: 0.938rem;
     flex-direction: column;
     text-align: center; */
     padding: 100px 30px;
-    background-color: rgb(255, 0, 0);
+    background:var(--color-seleccionado);
+    background: var(--color-segundo);
+    color: white;
     }
 
 
@@ -207,7 +236,7 @@ font-size: 0.938rem;
 /* --------------------COMIENZO DE MIS PROYECTOS------------------ */
 .container-proyectos {
     padding: 120px 30px;
-    background-color: rgb(247, 247, 247)
+    background-color: EBF2F5;
 }
 
 .texto-proyectos {
@@ -219,8 +248,9 @@ font-size: 0.938rem;
 }
 
 h4 {
-    font-size: 30px;
+    font-size:var(--subtitulos--tamaño);
     padding-bottom: 10px;
+    font-family:var(--tipografia-titulo);
 }
 
 .card-proyecto img {
@@ -239,14 +269,17 @@ h4 {
     width: 292px;
     height: 282px;
   margin: 8px;
-  /* font-size: 5px; */
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 8px;
   background-color: white;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);}
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.card-proyecto:hover {
+    box-shadow: 0 0 8px 4px (13,78,90);
+    -webkit-box-shadow: 0 0 6px 3px rgb(124, 198, 201)}
     
 
 .card-proyecto a {
@@ -257,142 +290,186 @@ h4 {
 /* ------------------FINAL DE "MIS PROYECTOS"--------------------------------------- */
 
 /* -----------------------------------COMIENZO DE "CONTACTAME"------------------------------------------- */
-.contactame{
-padding: 32px 30px;
-background-color: rgb(237, 212, 255);
-padding-bottom: 100px;
+.contactame {
+    background-color:rgb(214,229,232);
+    padding: 18px;
+    padding-top: 50px;
 }
 
 h5 {
-    font-size: 30px;
-    margin-bottom: 10px;
+    font-family: var(--tipografia-titulo);
+    font-size:var(--subtitulos--tamaño);
+    padding-bottom: 13px;
 }
-
-.parrafo-de-contacto {
-margin-bottom: 15px;
+.container-contactame {
+    padding-bottom: 55px;
 }
-
-/* ------------ LISTA DE CONTACTOS----------- */
- 
-
 .container-contacto {
-        margin-top: 35px;
-        padding-left: 10px;
-        margin-bottom: 30px;
-    }
+    margin-top: 35px;
+    padding-left: 22px;
+    margin-bottom: 30px;
+}
+.parrafo-de-contacto{
+    padding-top: 13px;
+    padding-bottom: 15px;
+    color: rgb(65, 65, 65);
+}
 .lista-de-contacto {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    }
-    
+display: flex;
+align-items: flex-start;
+flex-direction: column;
+padding-top: 30px;
+}
+
 .red-github {
-        display: flex;
-        align-items: center;
-        text-decoration: none;
-        padding-bottom: 15px;
-        color: black;
-    }
-
-.red-github span:first-child {
-    font-size: 20px;
-    background-color: aqua;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    color: black;
-}
-
-.red-github span:last-child {
-    padding-left: 15px;
-}
-
-.email {
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding-bottom: 15px;
-    color: black;
+    padding-bottom: 30px;
+    color: rgb(0, 0, 0);
+}
+.red-github span:first-child {
+font-size: 25px;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 30px;
+height: 30px;
+color:var(--color-icono);
+}
+.red-github span:first-child:hover {
+    font-size: 30px;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+   } 
 
+.red-github span:last-child {
+padding-left: 15px;
+}
+
+.email {
+display: flex;
+align-items: center;
+text-decoration: none;
+padding-bottom: 15px;
+color: black;
 }
 .email span:first-child {
-    font-size: 20px;
-    background-color: aqua;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    color: black;
+font-size: 20px;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 30px;
+height: 30px;
+color:var(--color-icono);
 }
-.email span:last-child  {
-    padding-left: 15px;
+/* ------------ACCION HOVER EN LOS ICONOS ----------------------------- */
+.email span:first-child:hover{
+     font-size: 20px;
+     cursor: pointer;
+        color: rgb(255, 255, 255);
+       
+}
 
+.email span:last-child  {
+padding-left: 15px;
 }
+
+.email:hover span:first-child {
+    font-size: 20px;
+    background: var(--color-icono);
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+}
+
+.github-text:hover {
+    color: rgb(128, 0, 96);
+}
+
+.red-github:hover span:first-child {
+    font-size: 20px;
+    background:var(--color-icono);
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+}
+
 /* ----------------falta aqui poner la opcion hover------------ */
 /* ---------FIN DEL NAV DE LISTA DE CONTACTO------------- */
 /* -------------------------COMIENZO DE FORMULARIO----------------------------------- */
-.container-escribeme{
-    margin-top: 30px;
-    display: flex;
-    
-}
-h6 {
-    font-size: 30px;
-    font-weight: bold;
-}
-.input_container {
-    display: flex;
-    flex-direction: column;
-    
-}
-.input_container label {
-    margin: 8px;
-}
-.input_container input {
-    border-radius: 30px;
-    height: 37px;
-    border: none;
-}
-.input_container ::placeholder {
-    font-size: 15px;
-    padding-left: 18px;
-}
-.input_container textarea {
-    padding:10px;
-    border-radius: 34px;
-    border: none;
-}
-.input_container textarea ::placeholder {
-    font-size: 15px;
-    padding-left: 18px; 
+.container-formulario {
+    padding-bottom: 60px;
 }
 
-.btn-enviar {
-    font-size: 12px; 
-    color: #ffffff; 
-    background-color: #5b4caf; 
-    padding: 12px 30px; 
-    border: none; 
-    border-radius: 100px; 
-    margin-top: 13px;
-    align-items: center;
+h6 {
+font-size:var(--subtitulos--tamaño);
+font-weight: bold;
+padding-bottom: 15px;
+font-family: var(--tipografia-titulo);
 }
+
+.input_container {
+display: flex;
+flex-direction: column;
+padding-bottom: 8px;
+}
+.input_container label {
+margin: 8px;
+}
+.input_container input {
+border-radius: 30px;
+height: 37px;
+border: none;
+}
+.input_container ::placeholder {
+font-size: 15px;
+padding-left: 18px;
+}
+.input_container textarea {
+padding:10px;
+border-radius: 34px;
+border: none;}
+
+.input_container textarea ::placeholder {
+font-size: 15px;
+padding-left: 18px; 
+}
+
+
+.btn-enviar{
+font-size: 12px; 
+color: #ffffff; 
+background: var(--color-seleccionado);
+background: var(--color-segundo);
+padding: 12px 30px; 
+border: none; 
+border-radius: 100px; 
+margin-top: 13px;
+
+align-items: center;}
+.btn-enviar:hover {
+    background-color: #4fc5cf;
+    cursor: pointer;
+
+ }
+ fieldset {
+    border: none;
+  }
+/* ----------------falta aqui poner la opcion hover------------ */
+/* ---------FIN DEL NAV DE LISTA DE CONTACTO------------- */
+/* -------------------------COMIENZO DE FORMULARIO----------------------------------- */
 
 /* -----------FINAL DE FORMULARIO Y SECCION "contactame"----------------------------------- */
 
 
- footer  {
+ footer{
     display: flex;
     justify-content: center;
     text-align: center;
-    background-color: #5d5dea;
+    background-color:var(--color-seleccionado);
+    /* background-color: #45062e; */
+    /* background-color: #5d5dea; */
     padding: 70px 30px;
     flex-direction: column;
 }
@@ -405,7 +482,11 @@ h6 {
 .navegacion-de-footer {
     padding-bottom: 20px;
 }
-
+@media (max-width: 970px) {
+    .navegacion-de-footer {
+        display: none; 
+    }
+}
 /* -------------FINAL DE NAVEGACION DE FOOTER PARA DOSKTOP--------------------------- */
 
 /* -----------ICONOS Y SALUDO FINAL ------------------------------------ */
@@ -426,19 +507,33 @@ h6 {
         }
     
     .red-githubdos span {
-        font-size: 30px;
-        background-color: rgb(112, 54, 54);
+        font-size: 20px;
+        /* background-color: rgb(112, 54, 54); */
+        background-color: #ffffff;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 45px;
         height: 45px;
-        color: black;
+        color:var(--color-seleccionado);
         margin: 10px;
     }
+    .red-githubdos span:hover{
+        border: 1px solid white;
+        color: white;
+        background: var(--color-seleccionado);
+        background: var(--color-segundo);
+
+       
+    }
+
+
     
+
+
 .saludo-final {
-    font-size: 20px;
+    font-size: 15px;
     color: white;
 }
+
